--- a/home.html
+++ b/home.html
@@ -128,9 +128,9 @@
   <div class="heading"><b>time to completion hypothesis</b></div>
   <div class="paragraph"><b>
       <p>Null:
-    </b>the time to completion of version A will be equal to that of version B.
+    </b>the time to completion of version A will <b>be equal </b>to that of version B.
     <br> <br>
-    <b>Alternative:</b> The time to completion of version B will be lower than that of version A because version B has a
+    <b>Alternative:</b> The time to completion of version B will be <b>lower </b>than that of version A because version B has a
     clearer layout.
     Since it is clearer, the user will complete the task faster.
     </p>
@@ -139,9 +139,9 @@
   <div class="heading"><b>return rate hypothesis</b></div>
   <div class="paragraph"><b>
       <p>Null:
-    </b>the return rate of version A will be equal to that of version B.
+    </b>the return rate of version A will <b>be equal </b>to that of version B.
     <br> <br>
-    <b>Alternative:</b> The return rate of version B will be lower than that of version A because version B has a
+    <b>Alternative:</b> The return rate of version A will <b>not be equal </b>to the return rate of version B because version B has a
     clearer layout.
     Since the task is to add cacti to a cart, one could argue that you don't want the user to be returning to the browse
     page. You want the user to fill their cart with at least $150 of cacti and that's it.
@@ -210,7 +210,7 @@
       <ul>
         <li> Unfortunately, since both the t-test and chi-squared test were not statistically significant, I could not draw any conclusions on how the design differences between version A and version B affected each version's performance. </li>
         <li> I think the major limitation in this study was the small sample size of users and the fact that all of the participating users were Brown students. In order to obtain more accurate results,
-          I would conduct the same test on a larger group of users across different demographics (e.g. different age groups, occupations etc). </li>
+          I would conduct the same test on a larger group of users across different demographics (e.g. different age groups, occupations etc.) </li>
       </ul>
     </div>
 </body>
