--- a/home.html
+++ b/home.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <meta content="width=device-width, initial-scale=1" name="viewport" />
   <meta charset="utf-8">
 </head>
@@ -19,11 +20,18 @@
       <a class="navbar-brand">
         <h1>&hearts; </h1>
       </a>
-      <div class="collapse navbar-collapse">
+
+      <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
+        style="border: none;">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
-          <li class="navbar-item"> my stuff </li>
-          <li class="navbar-item"> just me </li>
-          <li class="navbar-item"> resume </li>
+          <li class="navbar-item"> <a href="../home.html">projects </a></li>
+          <li class="navbar-item"> <a href="../about.html">about me </a></li>
+          <li class="navbar-item"> <a href="../fake-resume.pdf" target="_blank">resume </a></li>
         </ul>
       </div>
     </div>
@@ -38,7 +46,13 @@
   <div class="project-menu">
     <nav class="navbar navbar-expand-sm navbar-light text-info">
       <div class="container-fluid">
-        <div class="collapse navbar-collapse">
+
+        <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#projectMenuContent"
+          aria-controls="projectMenuContent" aria-expanded="false" aria-label="Toggle navigation" style="border: none;">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="projectMenuContent">
           <ul class="navbar-nav ml-auto">
             <li class="navbar-item"> <a class="nav-link text-info" href="#context">context </a></li>
             <li class="navbar-item"> <a class="nav-link text-info" href="#website-versions">website versions
@@ -64,14 +78,16 @@
     <p>
       This morning, as I was waiting for my coffee to brew, I opened up instagram and noticed that the interface was
       different. New features, such as instagram shop,
-      were added and the "search" and "activity" icons were moved to the top of the page. I struggled to find the search icon
+      were added and the "search" and "activity" icons were moved to the top of the page. I struggled to find the search
+      icon
       for like, 10 seconds! Annoying. When my roommate woke up,
       I expressed my frustration and she told me that her interface hadn't changed yet. This, my friends, is a classic
       example of A/B testing. <br> <br>
 
       <b> A/B testing involves showing two different versions of a webpage to webpage visitors and then comparing the
         two to see which performs better. </b> A version's performance
-      can be evaluated using a number of different metrics, such as measuring the time taken to complete a task. <br> <br>
+      can be evaluated using a number of different metrics, such as measuring the time taken to complete a task. <br>
+      <br>
 
       For this project, I created two versions of an online cactus shop. In this article, I'm going to walk you through
       the two versions I made, how I collected user data, and how I
@@ -130,7 +146,8 @@
       <p>Null:
     </b>the time to completion of version A will <b>be equal </b>to that of version B.
     <br> <br>
-    <b>Alternative:</b> The time to completion of version B will be <b>lower </b>than that of version A because version B has a
+    <b>Alternative:</b> The time to completion of version B will be <b>lower </b>than that of version A because version
+    B has a
     clearer layout.
     Since it is clearer, the user will complete the task faster.
     </p>
@@ -141,7 +158,8 @@
       <p>Null:
     </b>the return rate of version A will <b>be equal </b>to that of version B.
     <br> <br>
-    <b>Alternative:</b> The return rate of version A will <b>not be equal </b>to the return rate of version B because version B has a
+    <b>Alternative:</b> The return rate of version A will <b>not be equal </b>to the return rate of version B because
+    version B has a
     clearer layout.
     Since the task is to add cacti to a cart, one could argue that you don't want the user to be returning to the browse
     page. You want the user to fill their cart with at least $150 of cacti and that's it.
@@ -157,7 +175,8 @@
       University. As mentioned earlier, the link
       randomly displays either version A or B. Every time a user would carry out the task, I received a data log which
       included timestamps of when the user loaded the webpage, clicked
-      on any "Add To Cart" button, and whether the user clicked on "CART" at any point to navigate to the checkout page.<br> <br>
+      on any "Add To Cart" button, and whether the user clicked on "CART" at any point to navigate to the checkout
+      page.<br> <br>
       Once I had the data logs from all the users, I transferred the data
       to a CSV file for data cleaning. This involved removing outliers and removing logs from users who just navigated
       to my webpage but didn't do anything.
@@ -172,7 +191,8 @@
     <p>
       Once the data was cleaned, I was able to calculate time to completion by subtracting the timestamp of the initial
       page load time from the timestamp of the last action the user performed.
-      I measured return rate by checking whether each user <i> returned </i> to the browsing after having gone to the checkout page. Finally, I was ready to run statistical tests on the data.
+      I measured return rate by checking whether each user <i> returned </i> to the browsing after having gone to the
+      checkout page. Finally, I was ready to run statistical tests on the data.
     </p>
   </div>
   <div class="heading"><b>time to completion: t-test</b></div>
@@ -207,12 +227,38 @@
     takeaways
   </div>
   <div class="summary" style="font-size: 18px">
-      <ul>
-        <li> Unfortunately, since both the t-test and chi-squared test were not statistically significant, I could not draw any conclusions on how the design differences between version A and version B affected each version's performance. </li>
-        <li> I think the major limitation in this study was the small sample size of users and the fact that all of the participating users were Brown students. In order to obtain more accurate results,
-          I would conduct the same test on a larger group of users across different demographics (e.g. different age groups, occupations etc.) </li>
-      </ul>
-    </div>
+    <ul>
+      <li> Unfortunately, since both the t-test and chi-squared test were not statistically significant, I could not
+        draw any conclusions on how the design differences between version A and version B affected each version's
+        performance. </li>
+      <li> I think the major limitation in this study was the small sample size of users and the fact that all of the
+        participating users were Brown students. In order to obtain more accurate results,
+        I would conduct the same test on a larger group of users across different demographics (e.g. different age
+        groups, occupations etc.) </li>
+    </ul>
+  </div>
+
+  <footer class="myfooter">
+    <div class="copyright"> coded with &hearts; | anonymous</div>
+    <div class="social">
+      <a href=""><i class="fa fa-facebook"></i></a>
+      &nbsp;<a href=""><i class="fa fa-instagram"></i></a>
+      &nbsp;<a href=""><i class="fa fa-linkedin"></i></a></div>
+  </footer>
+
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> 
+  <!-- Bootstrap tooltips --> 
+  <script type="text/javascript"
+    src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>  
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+    crossorigin="anonymous"></script> 
+  <!-- Bootstrap core JavaScript --> 
+  <script type="text/javascript"
+    src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script> 
+  <!-- MDB core JavaScript --> 
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/js/mdb.min.js"></script>
+  <script src="portfolio.js"></script>
 </body>
 
 </html>
