--- a/home.html
+++ b/home.html
@@ -108,7 +108,7 @@
   </div>
   <div class="heading"><b>version A </b> </div>
   <div class="image">
-    <img src="versionA.png" width="1000px">
+    <img src="versionA.png" alt="version A" width="1000">
   </div>
 
   <div class="paragraph"> Notice how in version A, the "Add To Cart", button is on the right of the image. </div>
@@ -117,7 +117,7 @@
   <div class="heading"> <b> version B</b></div>
 
   <div class="image">
-    <img src="versionB.png" width="1000px">
+    <img src="versionB.png" alt="version B" width="1000">
   </div>
 
   <div class="paragraph"> Notice how in version B, the "Add To Cart", button is below the image. </div>
@@ -142,14 +142,15 @@
   </div>
 
   <div class="heading"><b>time to completion hypothesis</b></div>
-  <div class="paragraph"><b>
-      <p>Null:
-    </b>the time to completion of version A will <b>be equal </b>to that of version B.
-    <br> <br>
-    <b>Alternative:</b> The time to completion of version B will be <b>lower </b>than that of version A because version
-    B has a
-    clearer layout.
-    Since it is clearer, the user will complete the task faster.
+  <div class="paragraph">
+    <p><b>Null:
+      </b>the time to completion of version A will <b>be equal </b>to that of version B.
+      <br> <br>
+      <b>Alternative:</b> The time to completion of version B will be <b>lower </b>than that of version A because
+      version
+      B has a
+      clearer layout.
+      Since it is clearer, the user will complete the task faster.
     </p>
   </div>
 
@@ -219,7 +220,7 @@
 
   <div class="heading"><b>infographic</b></div>
   <div class="image">
-    <img src="infographic.svg" width="700px">
+    <img src="infographic.svg" alt="infographic" width="700">
   </div>
 
   <!-- takeaways-->
@@ -258,7 +259,6 @@
     src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script> 
   <!-- MDB core JavaScript --> 
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/js/mdb.min.js"></script>
-  <script src="portfolio.js"></script>
 </body>
 
 </html>
