--- a/home.html
+++ b/home.html
@@ -238,7 +238,9 @@
         groups, occupations etc.) </li>
     </ul>
   </div>
-
+  <div>
+    <hr>
+  </div>
   <footer class="myfooter">
     <div class="copyright"> coded with &hearts; | anonymous</div>
     <div class="social">
